# r_agent

./: .gitignore  Cargo.toml  config.yaml  example.yaml  readme.md
src/: agent.rs  lib.rs  main.rs  memory.rs  model.rs  prompt.rs  tool.rs
src/agent/: base.rs  react_agent.rs  tool_agent.rs
src/config/: config.rs
src/memory/: base.rs  sliding_window.rs  summary.rs
src/model/: base.rs  litellm_model.rs  schema.rs
src/prompt/: agent.rs  summary.rs
src/tool/: base.rs  manager.rs
