[package]
name = "r_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
llm = { version = "1.2.4", features = ["openai", "anthropic", "deepseek"] }
async-trait = "0.1.89"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
anyhow = "1.0"
serde_json = "1.0.148"
once_cell = "1.21.3"
